<resources>
    <string name="app_name">ServiceHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Catalog</string>
    <string name="title_notifications">Profile</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_me">Me</string>

    <string name="back">Back</string>
    <string name="profile_image">Profile photo</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="message">Message</string>


    <string name="Welcome">Welcome</string>
    <string name="don_t_have_an_accout_yet">Don´t have an accout yet?</string>
    <string name="log_in">Log in</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="or_login_in_with">Or login in with</string>
    <string name="create_an_account">Create an account.</string>
    <string name="emailar">Email</string>
    <string name="passwordar">password</string>
    <string name="i_agree_with_terms_amp_conditions"><![CDATA[I agree with Terms & Conditions]]></string>
    <string name="create_account">Create account</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_inar">Log in</string>
    <string name="example_email_gmail_com">example.email@gmail.com</string>
    <string name="enter_at_least_8_characters">Enter at least 8+ characters</string>
    <string name="professionals">Professionals</string>
    <string name="_20k_professionals">+20k Professionals</string>
    <string name="featured_services_of_the_month">Featured Services of the Month</string>
    <string name="view_all">View all</string>
    <string name="favorite_services">Favorite services</string>
    <string name="namefd">NAME</string>
    <string name="stars">Stars</string>
    <string name="search">Search</string>
    <string name="namefn">Name</string>
    <string name="phone">Phone</string>
    <string name="emailfn">Email</string>
    <string name="passwordfn">Password</string>
    <string name="address">Address</string>
    <string name="street_123_city_state">Street #123, City, State</string>
    <string name="example_email_com">example@email.com</string>
    <string name="save_changes">Save changes</string>
    <string name="pay_now">Pay now</string>
    <string name="add_new_card">+ Add new card</string>
    <string name="jardiner_a_profesional">Professional gardening</string>
    <string name="schedule">Schedule</string>
    <string name="view_profile">View profile</string>
    <string name="full_name_profesional">Full name profesional</string>
    <string name="add_note">Add note</string>
    <string name="about">About</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="scheduleapf">Schedule</string>
    <string name="_1_834_followers">1,834 followers</string>
    <string name="quis_amet_magna_sint_pariatur_elit_irure_quis_officia_labore_esse">Quis amet magna sint pariatur elit irure quis officia labore esse.</string>
    <string name="jennifer_king_nulla_laboris_fugiat_minim">Jennifer King: Nulla laboris fugiat minim.</string>
    <string name="reviews">Reviews</string>
    <string name="managing">Managing</string>
    <string name="searchaps">Search</string>
    <string name="human_resource">Human Resource</string>
    <string name="top_skills">Top skills</string>
    <string name="servicio_general">General service</string>
    <string name="hr_advisor_founder_y_ceo">HR Advisor, Founder y CEO</string>
    <string name="start_your_premium_navigation">Start your premium navigation</string>
    <string name="consectetur_minim_tempor_ad_occaecat_ullamco_elit_ea_consequat">Consectetur minim tempor ad occaecat ullamco elit ea consequat</string>
    <string name="no_ads">No ads</string>
    <string name="personalized_recommendations">Personalized recommendations</string>
    <string name="we_promote_your_service">We promote your service</string>
    <string name="subscription_valid_for_one_month">Subscription valid for one month</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="note">Note</string>
    <string name="dania_amelia_designer">Dania Amelia / Designer</string>
    <string name="do_duis_cul">Do duis cul 😎</string>
    <string name="service_name">Service Name</string>
    <string name="worker_name">Worker Name</string>
</resources>